--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.7",
+    "graphql": "^15.4.0",
     "next": "10.0.5",
     "react": "17.0.1",
+    "react-csv": "^2.0.3",
     "react-dom": "17.0.1"
   }
 }
