--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@apollo/client": "^3.3.7",
     "@mr-yum/react-csv": "^2.1.0",
     "graphql": "^15.4.0",
+    "moment": "^2.29.1",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-csv": "^2.0.3",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-select": "^4.0.2"
   }
 }
