--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "graphql": "^15.4.0",
     "moment": "^2.29.1",
     "next": "10.0.5",
+    "plotly.js": "^1.58.4",
+    "plotly.js-dist": "^1.58.4",
     "react": "17.0.1",
     "react-csv": "^2.0.3",
     "react-dom": "17.0.1",
     "react-highlight": "^0.13.0",
+    "react-plotly.js": "^2.5.1",
     "react-select": "^4.0.2"
   }
 }
