Fix path in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "functions": {
-    "api/get-full-data.js": {
+    "pages/api/get-full-data.js": {
       "memory": 3008,
       "maxDuration": 60
 		},
-		"api/get-filtered-data.js": {
+		"pages/api/get-filtered-data.js": {
       "memory": 3008,
       "maxDuration": 60
     }
