--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "plotly.js-dist": "^1.58.4",
     "react": "17.0.1",
     "react-csv": "^2.0.3",
+    "react-datepicker": "^3.4.1",
     "react-dom": "17.0.1",
     "react-highlight": "^0.13.0",
     "react-plotly.js": "^2.5.1",
-    "react-select": "^4.0.2"
+    "react-select": "^4.0.2",
+    "react-toast-notifications": "^2.4.0"
   }
 }
