--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "@mr-yum/react-csv": "^2.1.0",
+    "@tailwindcss/typography": "^0.4.0",
     "graphql": "^15.4.0",
     "moment": "^2.29.1",
     "next": "10.0.5",
     "plotly.js": "^1.58.4",
     "plotly.js-dist": "^1.58.4",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-csv": "^2.0.3",
     "react-datepicker": "^3.4.1",
@@ -22,6 +24,12 @@
     "react-highlight": "^0.13.0",
     "react-plotly.js": "^2.5.1",
     "react-select": "^4.0.2",
-    "react-toast-notifications": "^2.4.0"
+    "react-toast-notifications": "^2.4.0",
+    "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.27",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.1.5"
   }
 }
