--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "@mr-yum/react-csv": "^2.1.0",
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
     "graphql": "^15.4.0",
     "moment": "^2.29.1",
@@ -25,11 +26,13 @@
     "react-plotly.js": "^2.5.1",
     "react-select": "^4.0.2",
     "react-toast-notifications": "^2.4.0",
+    "react-vis": "^1.11.7",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.27",
     "@types/react": "^17.0.2",
+    "@types/react-vis": "^1.11.6",
     "typescript": "^4.1.5"
   }
 }
